2017-06-02  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* config/rs6000/rs6000.c (rs6000_gimple_fold_builtin): Add handling
	for early expansion of vector absolute builtins.

2017-06-02  Richard Biener  <rguenther@suse.de>

	* tree-vect-slp.c (vect_detect_hybrid_slp_2): Match up
	what we consider a relevant use stmt with vect_detect_hybrid_slp_stmts.

2017-06-02  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/80948
	* tree-tailcall.c (find_tail_calls): Track stmts to move in
	stmt order as well.

2017-06-02  Richard Biener  <rguenther@suse.de>

	* tree-vect-loop.c (vect_analyze_loop_operations): Not relevant
	PHIs are ok.
	* tree-vect-stmts.c (process_use): Do not mark backedge defs
	for inductions as relevant.

2017-06-02  Richard Biener  <rguenther@suse.de>

	* tree-vect-loop.c (get_initial_def_for_induction): Inline into ...
	(vectorizable_induction): ... this.  Remove dead code.

2017-06-02  Eric Botcazou  <ebotcazou@adacore.com>

	* builtins. (expand_builtin_alloca): Remove second parameter and
	infer its value from the first parameter instead.
	(expand_builtin) <BUILT_IN_ALLOCA>: Adjust call to above.

2017-06-02  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/80903
	* loop-doloop.c (add_test): Unshare sequence.

2017-06-02  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	* doc/invoke.texi: Document the -Wsizeof-pointer-div warning.

2017-06-01  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	* config/i386/i386.c (x86_64_ms_sysv_extra_clobbered_registers): Make
	static.
	(xlogue_layout::get_stack_space_used, xlogue_layout::s_instances,
	xlogue_layout::get_instance, logue_layout::xlogue_layout,
	sp_valid_at, fp_valid_at, choose_basereg): Formatting.
	(xlogue_layout::get_stub_rtx): Make static.
	(xlogue_layout::get_stub_name): Avoid const-cast, make static.
	(xlogue_layout::compute_stub_managed_regs): Rename to...
	(xlogue_layout::count_stub_managed_regs): ...this.
	(xlogue_layout::is_stub_managed_reg): New function.